# gpt-chatbot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.cfg  update_deps.sh
chatbot/: admin.py  apps.py  collections.py  completion.py  embeddings.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
chatbot/management/commands/: clear_index.py  import_texts.py  index_realm.py
chatbot/migrations/: 0001_initial.py  0002_alter_realm_embedding_dim_question.py  0003_question_prompt.py  0004_alter_text_url.py  0005_alter_text_options_chatbot_openai_org_and_more.py  0006_question_approved.py  0007_question_count.py  0008_chatbot_restricted_alter_chatbot_model.py  0009_chatbot_skip_context.py
chatbot/templates/admin/: base.html
core/: celery.py  rates.py  settings.py  urls.py
requirements/: dev.txt  prod.txt
usage/: admin.py  apps.py  models.py  services.py
usage/migrations/: 0001_initial.py  0002_alter_organization_users.py
