[project]
name = "mv-mietzinsrechner-api"
version = "0.0.1"
dependencies = [
    "asyncio-redis-rate-limit",
    "backoff",
    "django-cors-headers",
    "django",
    "django-environ",
    "django-model-utils",
    "django-sesame[ua]",
    "django-stubs-ext",
    "django-storages",
    "uvicorn",
    "boto3",
    "gunicorn",
    "more-itertools",
    "pymilvus",
    "openai",
    "lxml",
    "numpy",
    "pandas",
    "psycopg2-binary",
    "markdown",
    "pymemcache",
    "redis",
    "whitenoise[brotli]",
    "transformers",
    "Pygments",
    "Pillow",
    "django_ratelimit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "django-stubs",
    "celery-stubs",
    "djangorestframework-stubs",
    "pytest",
    "types-cachetools",
    "types-cryptography",
    "tqdm-stubs",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.10"
check_untyped_defs = true
disallow_any_unimported = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pylsp-mypy]
enabled = true
strict = true


[tool.django-stubs]
django_settings_module = "core.settings"


[tool.flake8]
max-line-length = 120
exclude = ".tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv"

[tool.yapf]
based_on_style = "pep8"
column_limit = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true


[tool.pycodestyle]
max-line-length = 120
exclude = ".tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv"


[tool.ruff]
line-length = 120
